<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HungryNow</string>
    <string name="action_settings">Settings</string>
    <string name="discard">Empty my cart</string>
    <string name="order">Order now!</string>
    <string name="title_activity_single">Single</string>
    <string name="small">Small Size</string>
    <string name="medium">Medium Size</string>
    <string name="large">Large Size</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_info">Info</string>
    <string name="info">Info</string>
    <string name="ginos">Ginos</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="number">Contact Number</string>
    <string name="title_activity_web">Web</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_manager">Manager</string>

</resources>
