<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="15dip"
    android:paddingTop="15dip" >

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_weight="0.32"
        android:text="@string/ginos"
        android:textSize="35dip"
        android:textStyle="bold" />
         
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="7dp"
        android:layout_weight="1"
        android:paddingRight="15dip" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:textColor="#2f6699"
            android:textSize="22dp"
            android:textStyle="bold" >      
          <TextView 
              android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:text="@string/address"
            android:textColor="#2f6699"
            android:textSize="22dp"
            android:textStyle="bold" />
          <TextView 
              android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2f6699"
            android:textSize="18dp"
            android:text="34 Maint St New York, NY" />     
        </LinearLayout>
    </RelativeLayout>
    
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="7dp"
        android:layout_weight="1"
        android:paddingRight="15dip" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:textColor="#2f6699"
            android:textSize="22dp"
            android:textStyle="bold" >        
          <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="#2f6699"
            android:textSize="22dp"
            android:textStyle="bold" />
          <TextView 
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2f6699"
            android:textSize="18dp"
            android:text="773 971-9733" />     
        </LinearLayout> 
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="7dp"
        android:layout_weight="1"
        android:paddingRight="15dip" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:textColor="#2f6699"
            android:textSize="22dp"
            android:textStyle="bold" >        
          <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#2f6699"
            android:textSize="22dp"
            android:textStyle="bold" />
          <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2f6699"
            android:autoLink="email"
    		android:text="lolitalpp@gmail.com"
            android:textSize="18dp" />     
        </LinearLayout>   
    </RelativeLayout>
    
    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal" >

       <Button
           android:id="@+id/web_button"
           android:layout_width="wrap_content"
           android:layout_height="fill_parent"
           android:layout_gravity="center_vertical"
           android:layout_weight="0.46"
           android:background="@drawable/blue_button"
           android:onClick="onDrawSelectorOnTop"
           android:text="Go to Web Page"
           android:textColor="@android:color/white"
           android:textSize="16dip"
           android:textStyle="bold" />

       </LinearLayout>

</LinearLayout>
